<resources>
    <string name="app_name">UCF GO</string>
    <string name="LogoImage">UCF GO Logo</string>
    <string name="SignInButton">Login</string>
    <string name="UsernameTitle">Username</string>
    <string name="PasswordTitle">Password</string>
    <string name="UsernameField">Email</string>
    <string name="PasswordField">Password</string>
    <string name="Signup">Create Account</string>
    <string name="WelcomeText">Welcome Chandler</string>
    <string name="SettingsButton">Settings</string>
    <string name="QRCodeText">Show Available Spots</string>
    <string name="FindCarText">Find My Car</string>
    <string name="HomePage">Home</string>
    <string name="SettingsPage">Settings</string>
    <string name="signUpTitle">Sign up</string>
    <string name="nameTitle">Full Name</string>
    <string name="title_activity_available_spots">available_spots</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buttonGA">Garage A</string>
    <string name="buttonGB">Garage B</string>
    <string name="buttonGC">Garage C</string>
    <string name="buttonGD">Garage D</string>
    <string name="buttonGE">Garage E</string>
    <string name="buttonGF">Garage F</string>
    <string name="buttonGG">Garage G</string>
    <string name="buttonGH">Garage H</string>
    <string name="buttonGI">Garage I</string>
    <string name="buttonGL">Libra Garage</string>
    <!-- Strings used for fragments for navigation -->

</resources>