<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_dark_background">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="379dp"
        android:layout_height="437dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TextView
            android:id="@+id/UsernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/UsernameTitle"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/myTextColor"
            app:met_iconPadding="0dp"
            app:met_iconRight="@drawable/ic_email"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor" />


        <TextView
            android:id="@+id/PasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/PasswordTitle"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="Password"
            android:inputType="textPassword"
            app:met_baseColor="@color/myTextColor"
            app:met_iconPadding="0dp"
            app:met_iconRight="@drawable/ic_email"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor" />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nameTitle"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="Name"
            android:inputType="text"
            app:met_baseColor="@color/myTextColor"
            app:met_iconPadding="0dp"
            app:met_iconRight="@drawable/ic_email"
            app:met_primaryColor="@color/myTextColor"
            app:met_textColorHint="@color/myTextColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>